2014-10-18  David B. Lamkins  <david@lamkins.net>

	* pstat.c (show_pstat): Create Pstat window under mouse pointer.

2014-10-17  David B. Lamkins  <david@lamkins.net>

	* menu.h: Support explicit creation of a new file editor, rather
	than having to go through export followed by import. Remove export
	commands.

	* edit.h: Support explicit creation of a new file editor, rather
	than having to go through export followed by import. Remove export
	commands.

	* menu.c (set_filename, new_file, build_menubar): Support explicit
	creation of a new file editor, rather than having to go through
	export followed by import. Remove export commands.

	* edit.c (edit_save_file, edit_delete_real, build_edit_menubar)
	(edit_object, edit_file): Support explicit creation of a new file
	editor, rather than having to go through export followed by
	import. Remove export commands.

2014-10-16  David B. Lamkins  <david@lamkins.net>

	* options.h: Add --shortcuts command-line option.

	* menu.h: Add --shortcuts command-line option.

	* options.c: Add --shortcuts command-line option.

	* menu.c (init_shortcuts): Add --shortcuts command-line option.

	* aplwrap.c (main): Add --shortcuts command-line option.

	* complete.c: Improve completion function's wraparound logic. Fix
	completion function's origin-dependence.

	* complete.c: Completion function handles empty completion list.

2014-10-15  David B. Lamkins  <david@lamkins.net>

	* pstat.h (): Pstat window is now accessed via Help menu and
	retains appearance when not in front.

	* menu.c (settings_cb): Pstat window is now accessed via Help menu
	and retains appearance when not in front.

	* help.c (help_menu): Pstat window is now accessed via Help menu
	and retains appearance when not in front.

	* pstat.c (pstat_destroy, show_pstat): Pstat window is now
	accessed via Help menu and retains appearance when not in front.

2014-10-14  David B. Lamkins  <david@lamkins.net>

	* aplwrap.c (delete_uncommitted_input, key_press_event): Bind